--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-  <div class="headline">Layout
+  <div class="headline">
+    Layout
     <div class="links">
       <a routerLink="/map">Map</a>
     </div>
   </div>
 
   <div class="main">
-    <router-outlet/>
+    <router-outlet />
   </div>
-
 </div>
