--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,6 @@
   <div class="main">
     <router-outlet />
   </div>
+  <button mat-raised-button color="primary">Custom Themed Button</button>
 </div>
+<app-header></app-header>
