--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../src/definitions.scss";
+
+@import "../src/app/styles/material.scss";
+@import "../src/app/styles/tailwind.scss";
