Added material colors to tailwind extend colors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
   <div class="main">
     <router-outlet />
   </div>
-  <button mat-raised-button color="primary">Custom Themed Button</button>
+  <button mat-raised-button color="primary">Välj</button>
 </div>
 <app-header></app-header>
