--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
-<div class="bottom-header">
-  <div class="right">Hello</div>
+<div class="bottom-header bg-tertiary">
+  <div class="right text-white">Användare</div>
 </div>
