--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-@import "../src/definitions.scss";
-
+@import "../src/app/styles/colors.scss";
 @import "../src/app/styles/material.scss";
 @import "../src/app/styles/tailwind.scss";
