--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
 <div class="bottom-header bg-tertiary">
-  <div class="right text-white">Användare</div>
+  <div class="right text-white">
+    {{ authService.currentUserSig()?.userName }}
+  </div>
 </div>
