Fixing min-height on header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,4 @@
     <router-outlet />
   </div>
 </div>
-<app-header></app-header>
+<app-header *ngIf="authService.currentUserSig()"></app-header>
