--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,47 @@
-<div class="container">
-  <div class="headline">
-    @if (authService.currentUserSig() == null) {
-    <div class="flex space-x-4">
-      <a routerLink="/login">Login</a>
-      <a routerLink="/register">Register</a>
-    </div>
-    } @if (authService.currentUserSig()) {
-    <div class="flex space-x-4">
-      <span (click)="logout()">Logga ut</span>
-    </div>
-    }
+<div class="main-container flex flex-col h-screen">
+  <div class="login-container flex-grow flex justify-center items-center">
+    <!-- <div class="login-form w-[50%] h-[50%] bg-slate-200"></div> -->
+    <mat-card class="w-[50%] h-[50%] bg-slate-100 flex flex-col items-center">
+      <mat-tab-group class="w-[80%]">
+        <mat-tab label="Logga in"
+          ><mat-card-content>
+            <app-login class="w-[100%]"></app-login> </mat-card-content
+        ></mat-tab>
+        <mat-tab label="Registrera">
+          <mat-card-content class="flex flex-col items-center">
+          </mat-card-content>
+        </mat-tab>
+      </mat-tab-group>
+    </mat-card>
   </div>
+  <!-- Innehåll i mitten -->
+  <!-- <div class="flex-grow flex items-center justify-center">
+    <mat-card
+      class="w-64 h-64 flex flex-col items-center justify-center shadow-lg"
+    >
+      <mat-card-title class="text-center text-lg font-bold"
+        >Logga in</mat-card-title
+      >
+    </mat-card>
+  </div> -->
 
-  <div class="main mt-6">
-    <router-outlet />
-  </div>
+  <app-header
+    *ngIf="authService.currentUserSig()"
+    class="w-full bg-gray-200 py-4 text-center"
+  >
+    Footer-innehåll här
+  </app-header>
 </div>
-<app-header *ngIf="authService.currentUserSig()"></app-header>
+
+<!-- <div class="headline">
+  @if (authService.currentUserSig() == null) {
+  <div class="flex space-x-4">
+    <a routerLink="/login">Login</a>
+    <a routerLink="/register">Register</a>
+  </div>
+  } @if (authService.currentUserSig()) {
+  <div class="flex space-x-4">
+    <span (click)="logout()">Logga ut</span>
+  </div>
+  }
+</div> -->
