--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,14 +2,24 @@
 <div>{{ errorMessage }}</div>
 }
 
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div>
-    <input type="text" placeholder="Email" formControlName="email" />
-  </div>
-  <div>
-    <input type="password" placeholder="Password" formControlName="password" />
-  </div>
-  <div>
-    <button type="submit">Sign In</button>
-  </div>
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="flex flex-col w-[100%]">
+  <mat-form-field>
+    <input
+      matInput
+      type="text"
+      placeholder="Email"
+      formControlName="email"
+      class="w-[80%]"
+    />
+    <mat-error></mat-error>
+  </mat-form-field>
+  <mat-form-field>
+    <input
+      matInput
+      type="password"
+      placeholder="Password"
+      formControlName="password"
+    />
+  </mat-form-field>
+  <button type="submit">Sign In</button>
 </form>
