--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -1,5 +1,5 @@
 html {
-  --sys-primary: rgb(76 102 43);
+  --sys-primary: rgb(0 75 73);
   --sys-surface-tint: rgb(76 102 43);
   --sys-on-primary: rgb(255 255 255);
   --sys-primary-container: rgb(205 237 163);
@@ -20,7 +20,8 @@ html {
   --sys-on-background: rgb(26 28 22);
   --sys-surface: rgb(249 250 239);
   --sys-on-surface: rgb(26 28 22);
-  --sys-surface-variant: rgb(225 228 213);
+  --sys-surface-variant: rgb(245, 245, 245);
+  // --sys-surface-variant: rgb(225 228 213);
   --sys-on-surface-variant: rgb(68 72 61);
   --sys-outline: rgb(117 121 108);
   --sys-outline-variant: rgb(197 200 186);
