--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,10 @@
-.mat-mdc-card {
-  background-color: white;
-  color: black;
+.router-container {
+  display: block;
+  position: relative;
 }
 
-.mat-mdc-card-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.mat-tab-body-content { overflow: hidden!important}
-
-
-::ng-deep .mat-mdc-tab-header .mdc-tab__text-label {
-  font-size: larger;
-  font-weight: 400;
+::ng-deep .router-container > * {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
