--- a/src/app/components/login-register-page/login/login.component.html
+++ b/src/app/components/login-register-page/login/login.component.html
@@ -40,9 +40,9 @@
     }
 
   </mat-form-field>
-
-  <div class="flex justify-center w-full">
-    <button mat-flat-button type="submit" class="w-[100%] mt-[11%]">Sign in</button>
-  </div>
+  <button mat-flat-button type="submit" [disabled]="isLoading() | async" class="custom-button">
+    <mat-spinner *ngIf="isLoading() | async" [diameter]="20"></mat-spinner>
+    <span *ngIf="!(isLoading() | async)">Sign in</span>
+  </button>
 </form>
 
