--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
 @import "../src/app/styles/colors.scss";
 @import "../src/app/styles/material.scss";
 @import "../src/app/styles/tailwind.scss";
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+    background-color: #e0e0e0; /* Grå färg */
+  }
