--- a/src/app/components/login-register-page/login/login.component.html
+++ b/src/app/components/login-register-page/login/login.component.html
@@ -40,9 +40,22 @@
     }
 
   </mat-form-field>
-  <button mat-flat-button type="submit" [disabled]="isLoading() | async" class="custom-button">
+  <button mat-flat-button type="submit" [disabled]="isLoading() | async" class="custom-button mt-[5%]">
     <mat-spinner *ngIf="isLoading() | async" [diameter]="20"></mat-spinner>
     <span *ngIf="!(isLoading() | async)">Sign in</span>
   </button>
+
+  <div class="relative flex justify-center my-4">
+    <span class="mx-4 text-sm" style="color: rgb(94, 108, 132);">
+      Eller fortsätt med
+    </span>
+  </div>
+
+  <button mat-flat-button (click)="onGoogleLogin()" [disabled]="isLoading() | async" class="custom-button">
+    <mat-spinner *ngIf="isLoading() | async" [diameter]="20"></mat-spinner>
+    <fa-icon class="mr-3" [icon]="faGoogle"></fa-icon>
+    <span *ngIf="!(isLoading() | async)">Google</span>
+  </button>
+  
 </form>
 
