--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,37 @@
   <div class="router-container h-full">
     <router-outlet></router-outlet>
   </div>
-  <div class="flex space-x-4 mb-[20px]">
-    <span (click)="logout()">Logga ut</span>
+   <div class="container p-4">
+    <h2 class="text-lg font-bold mb-4">Lägg till en fångst</h2>
+    <form (ngSubmit)="addItem()" class="mb-4">
+      <input
+        [(ngModel)]="fiskArt"
+        name="Fiskart"
+        placeholder="Fiskart"
+        class="border p-2 rounded w-full mb-2"
+      />
+      <input
+        [(ngModel)]="vikt"
+        name="Vikt"
+        placeholder="Vikt"
+        class="border p-2 rounded w-full mb-2"
+      />
+      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">
+        Lägg till
+      </button>
+    </form>
+
+    <h2 class="text-lg font-bold">Items</h2>
+    <ul>
+      <li *ngFor="let item of items$ | async">
+        <strong>{{ item.fishType }}</strong>: {{ item.fishWeight  }} : {{ item.user.userName}}
+      </li>
+    </ul>
   </div>
+  
   <app-header
     *ngIf="authService.currentUserSig()"
-    class="w-full bg-gray-200 py-4 text-center"
+    class="w-full bg-gray-200 py-4 text-center h-[5.5%]"
   >
   </app-header>
 </div>
