--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,8 @@
 <div
-  class="bg-tertiary text-white fixed bottom-0 left-0 w-full h-12 z-100 flex items-center justify-end pr-5"
+  class="bg-primary text-white fixed bottom-0 left-0 w-full h-[6%] z-100 flex items-center justify-end pr-5"
 >
   <ng-container>
     <span>{{ userName }}</span>
+    <span class="ml-6" (click)="logOut()">Logga ut</span>
   </ng-container>
 </div>
