--- a/src/app/components/login-register-page/register/register.component.html
+++ b/src/app/components/login-register-page/register/register.component.html
@@ -53,7 +53,7 @@
 
   </mat-form-field>
   <div class="flex justify-center w-full">
-    <button mat-flat-button type="submit" [disabled]="spinnerService.isLoading$ | async" class="w-[100%]">
+    <button mat-flat-button type="submit" [disabled]="spinnerService.isLoading$ | async" class="w-[100%] custom-button mt-[5%]">
       <mat-spinner *ngIf="isLoading() | async" [diameter]="20"></mat-spinner>
       <span *ngIf="!(isLoading() | async)">Register</span>
     </button>
