--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
   </div>
   
   <app-header
-    *ngIf="authService.currentUserSig()"
+    *ngIf="user"
     class="w-full bg-gray-200 py-4 text-center h-[5.5%]"
   >
   </app-header>
