--- a/src/app/components/add-catch/add-catch.component.html
+++ b/src/app/components/add-catch/add-catch.component.html
@@ -1,27 +1,22 @@
-<div class="container p-4">
-    <h2 class="text-lg font-bold mb-4">Lägg till en fångst</h2>
-    <form (ngSubmit)="addItem()" class="mb-4">
-      <input
-        [(ngModel)]="fiskArt"
-        name="Fiskart"
-        placeholder="Fiskart"
-        class="border p-2 rounded w-full mb-2"
-      />
-      <input
-        [(ngModel)]="vikt"
-        name="Vikt"
-        placeholder="Vikt"
-        class="border p-2 rounded w-full mb-2"
-      />
-      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">
-        Lägg till
-      </button>
-    </form>
-
-    <h2 class="text-lg font-bold">Items</h2>
-    <ul>
-      <li *ngFor="let catch of catches">
-        <strong>{{ catch.fishType }}</strong>: {{ catch.fishWeight  }} : {{ catch.user.userName}}
-      </li>
-    </ul>
-  </div>
+<div class="container p-4 flex flex-col items-center bg-white">
+  <img src="/fish-register-catch.svg" alt="Fish Register" class="h-32 mt-4">
+  <h2 class="text-lg font-bold mb-8">Lägg till en fångst</h2>
+  <form (ngSubmit)="addItem()" class="mb-5">
+    <input
+      [(ngModel)]="fiskArt"
+      name="Fiskart"
+      placeholder="Fiskart"
+      class="border p-2 rounded w-full mb-2"
+    />
+    <input
+      [(ngModel)]="vikt"
+      name="Vikt"
+      placeholder="Vikt"
+      class="border p-2 rounded w-full mb-2"
+    />
+    <div class="flex justify-end gap-4 mt-4">
+      <button mat-flat-button type="submit" class="bg-orange-500 text-white px-4 py-2 rounded">Lägg till</button>
+      <button mat-flat-button type="button" (click)="closeDialog()" class="bg-gray-500 text-white px-4 py-2 rounded">Avbryt</button>
+    </div>
+  </form>
+</div>
