--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,4 @@
-<div class="text-white fixed bottom-0 left-0 w-full h-[6%] z-100 flex items-center justify-between px-5" style="background: linear-gradient(135deg, rgba(68, 160, 141, 0.9), rgba(0, 75, 73, 0.9), rgba(9, 54, 55, 0.9));
-">
+<div class="text-white bg-primary fixed bottom-0 left-0 w-full h-[6%] z-100 flex items-center justify-between px-5">
   <div class="flex-1"></div>
   
   <div class="flex gap-14 justify-center flex-1">
