Added firebase hosting and updated browser support with generated browserslistrc

--- a/src/app/components/add-catch/add-catch.component.html
+++ b/src/app/components/add-catch/add-catch.component.html
@@ -1,5 +1,5 @@
 <div class="container p-4 flex flex-col items-center bg-white">
-  <img src="/fish-register-catch.svg" alt="Fish Register" class="h-32 mt-4">
+  <img src="assets/fish-register-catch.svg" alt="Fish Register" class="h-32 mt-4">
   <h2 class="text-lg font-bold mb-8">Lägg till en fångst</h2>
 
   <form [formGroup]="catchForm" (ngSubmit)="addItem()" class="mb-5">
