--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="text-white bg-primary fixed bottom-0 left-0 w-full h-[6%] z-100 flex items-center justify-between px-5">
+<div class="text-white bg-primary h-full w-full flex items-center justify-between px-5">
   <div class="flex-1"></div>
   
   <div class="flex gap-14 justify-center flex-1">
