--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,12 @@
 .mat-form-field-appearance-fill .mat-form-field-flex {
     background-color: #e0e0e0; /* Grå färg */
   }
+
+
+  // .leaflet-bottom {
+  //   bottom: 60px !important;
+  // }
+  
+  // .leaflet-control-zoom {
+  //   margin-bottom: 70px !important;
+  // }
