--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,3 +10,17 @@
   width: 100%;
   height: 100%;
 }
+
+// :host {
+//   display: block;
+//   height: 100%;
+//   width: 100%;
+//   position: relative;
+//   z-index: 1;
+// }
+
+// #map {
+//   height: 100%;
+//   width: 100%;
+//   position: relative;
+// }
