--- a/src/app/components/add-catch/add-catch.component.html
+++ b/src/app/components/add-catch/add-catch.component.html
@@ -1,6 +1,12 @@
 <div class="container p-4 flex flex-col items-center bg-white">
-  <img src="assets/fish-hook.svg" alt="Fish Register" class="h-32 mt-4">
-  <h2 class="text-lg font-bold mb-8">Lägg till en fångst</h2>
+  <button 
+  (click)="closeDialog()" 
+  class="absolute top-2 right-5 text-gray-500 hover:text-gray-700"
+>
+  <fa-icon [icon]="closeIcon" class="text-xl"></fa-icon>
+</button>
+  <img src="assets/fishing-pole.svg" alt="Fish Register" class="h-24 mb-2 mt-2">
+  <h2 class="text-lg font-bold mb-8">Add catch</h2>
 
   <form [formGroup]="catchForm" (ngSubmit)="addItem()" class="mb-5">
     
@@ -27,9 +33,14 @@
     </mat-form-field>
 
     <!-- Knappar -->
-    <div class="flex justify-end gap-4 mt-4">
-      <button mat-flat-button type="submit" class="bg-orange-500 text-white px-4 py-2 rounded">Lägg till</button>
-      <button mat-flat-button type="button" (click)="closeDialog()" class="bg-gray-500 text-white px-4 py-2 rounded">Avbryt</button>
+    <div class="mt-5">
+      <button 
+        mat-flat-button 
+        type="submit" 
+        class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-600"
+      >
+        Add
+      </button>
     </div>
   </form>
 </div>
