added responsive design to login page

--- a/src/app/components/login-register-page/login-register-page.component.html
+++ b/src/app/components/login-register-page/login-register-page.component.html
@@ -1,6 +1,6 @@
 <div class="login-container h-full flex justify-center items-center bg-login-bg bg-cover bg-center">
     <!-- <div class="login-form w-[50%] h-[50%] bg-slate-200"></div> -->
-    <mat-card class="w-[25%] h-[50%] bg-slate-100 flex flex-col items-center overflow-auto min-h-[55%]">
+    <mat-card class="w-[100%] h-[60%] lg:w-[25%] lg:h-[75%] xl:w-[30%] xl:h-[85%] 2xl:w-[25%] 2xl:h-[50%] bg-slate-100 flex flex-col items-center overflow-auto min-h-[55%]">
       <mat-tab-group dynamicHeight class="w-[80%] mt-[6%]">
         <mat-tab class="text-lg" label="Logga in"
           ><mat-card-content class="mt-[6%]">
