--- a/src/app/components/add-catch/add-catch.component.html
+++ b/src/app/components/add-catch/add-catch.component.html
@@ -5,7 +5,7 @@
 >
   <fa-icon [icon]="closeIcon" class="text-xl"></fa-icon>
 </button>
-  <img src="assets/fishing-pole.svg" alt="Fish Register" class="h-24 mb-2 mt-2">
+  <img src="assets/pike-fish.svg" alt="Fish Register" class="h-32 mt-2">
   <h2 class="text-lg font-bold mb-8">Add catch</h2>
 
   <form [formGroup]="catchForm" (ngSubmit)="addItem()" class="mb-5">
