--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,21 @@
-<div class="text-white bg-primary h-full w-full flex items-center justify-between px-5">
-  <div class="flex-1"></div>
-  
-  <div class="flex gap-14 justify-center flex-1">
-    <fa-icon [icon]="locationIcon" class="text-white text-2xl"></fa-icon>
-    <fa-icon [icon]="fishIcon" (click)="openFishRegisterDialog()" class="text-white text-2xl cursor-pointer"></fa-icon>
-    <fa-icon [icon]="peopleIcon" class="text-white text-2xl"></fa-icon>
+<div class="text-white bg-primary h-full w-full flex justify-center">
+  <div class="flex items-center justify-between w-[30%]"> 
+    <div class="flex flex-col items-center">
+      <fa-icon [icon]="trophyIcon" class="text-white text-xl"></fa-icon>
+      <span class="text-xs text-white">Contest</span>
   </div>
-  
-  <div class="flex items-center justify-end flex-1">
-    <span>{{ user?.userName}}</span>
-    <span class="ml-6" (click)="logOut()">Logga ut</span>
+  <div class="flex flex-col items-center">
+    <fa-icon [icon]="locationIcon" class="text-white text-xl"></fa-icon>
+    <span class="text-xs text-white">Map</span>
+</div>
+      <fa-icon [icon]="addCatchIcon" (click)="openFishRegisterDialog()" class="text-white text-3xl cursor-pointer"></fa-icon>
+      <div class="flex flex-col items-center">
+        <fa-icon [icon]="peopleIcon" class="text-white text-xl"></fa-icon>
+        <span class="text-xs text-white">Standings</span>
+    </div>
+    <div class="flex flex-col items-center">
+      <fa-icon [icon]="userIcon" (click)="logOut()" class="text-white text-xl"></fa-icon>
+      <span class="text-xs text-white">User</span>
+  </div>
   </div>
 </div>
