added user settings page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="main-container relative flex flex-col h-[100dvh] overflow-hidden">
+<div class="main-container relative flex flex-col min-h-screen overflow-auto">
   <div class="router-container flex-1">
     <router-outlet></router-outlet>
   </div>
