--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,21 +1,24 @@
 <div class="text-white bg-primary h-full w-full flex justify-center">
-  <div class="flex items-center justify-between w-[30%]"> 
+  <div class="flex items-center justify-between w-[95%] lg:w-[30%]"> 
     <div class="flex flex-col items-center">
       <fa-icon [icon]="trophyIcon" class="text-white text-xl"></fa-icon>
       <span class="text-xs text-white">Contest</span>
   </div>
-  <div class="flex flex-col items-center">
-    <fa-icon [icon]="locationIcon" class="text-white text-xl"></fa-icon>
+  <div class="flex flex-col items-center" routerLink="/map">
+    <fa-icon [icon]="locationIcon" class="text-white text-xl cursor-pointer"></fa-icon>
     <span class="text-xs text-white">Map</span>
 </div>
-      <fa-icon [icon]="addCatchIcon" (click)="openFishRegisterDialog()" class="text-white text-3xl cursor-pointer"></fa-icon>
+      <fa-icon [icon]="addCatchIcon" (click)="openFishRegisterDialog()" class="text-white text-4xl lg:text-3xl cursor-pointer"></fa-icon>
       <div class="flex flex-col items-center">
         <fa-icon [icon]="peopleIcon" class="text-white text-xl"></fa-icon>
-        <span class="text-xs text-white">Standings</span>
+        <span class="text-xs text-white">Stats</span>
     </div>
-    <div class="flex flex-col items-center">
-      <fa-icon [icon]="userIcon" (click)="logOut()" class="text-white text-xl"></fa-icon>
+    <div class="flex flex-col items-center cursor-pointer" routerLink="/user">
+      <fa-icon [icon]="userIcon"  class="text-white text-xl"></fa-icon>
       <span class="text-xs text-white">User</span>
   </div>
+  <!-- <div (click)="logOut()">
+    Log out
+  </div> -->
   </div>
 </div>
