--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,8 +10,8 @@
 </div>
       <fa-icon [icon]="addCatchIcon" (click)="openFishRegisterDialog()" class="text-white text-4xl lg:text-3xl cursor-pointer"></fa-icon>
       <div class="flex flex-col items-center">
-        <fa-icon [icon]="peopleIcon" class="text-white text-xl"></fa-icon>
-        <span class="text-xs text-white">Stats</span>
+        <fa-icon [icon]="starIcon" class="text-white text-xl"></fa-icon>
+        <span class="text-xs text-white">Leaderboard</span>
     </div>
     <div class="flex flex-col items-center cursor-pointer" routerLink="/user">
       <fa-icon [icon]="userIcon"  class="text-white text-xl"></fa-icon>
