--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -45,7 +45,7 @@ html {
   --sys-surface-dim: rgb(218 219 208);
   --sys-surface-bright: rgb(249 250 239);
   --sys-surface-container-lowest: rgb(255 255 255);
-  --sys-surface-container-low: rgb(243 244 233);
+  --sys-surface-container-low: rgb(255, 255, 255);
   --sys-surface-container: rgb(255, 255, 255);
   --sys-surface-container-high: rgb(232 233 222);
   --sys-surface-container-highest: rgb(226 227 216);
