--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -16,9 +16,9 @@ html {
   --sys-on-error: rgb(255 255 255);
   --sys-error-container: rgb(255 218 214);
   --sys-on-error-container: rgb(65 0 2);
-  --sys-background: rgb(249 250 239);
+  --sys-background: rgb(255, 255, 255);
   --sys-on-background: rgb(26 28 22);
-  --sys-surface: rgb(249 250 239);
+  --sys-surface: rgb(255, 255, 255);
   --sys-on-surface: rgb(26 28 22);
   --sys-surface-variant: rgb(245, 245, 245);
   // --sys-surface-variant: rgb(225 228 213);
@@ -43,7 +43,7 @@ html {
   --sys-tertiary-fixed-dim: rgb(160 208 203);
   --sys-on-tertiary-fixed-variant: rgb(31 78 75);
   --sys-surface-dim: rgb(218 219 208);
-  --sys-surface-bright: rgb(249 250 239);
+  --sys-surface-bright: rgb(255, 255, 255);
   --sys-surface-container-lowest: rgb(255 255 255);
   --sys-surface-container-low: rgb(255, 255, 255);
   --sys-surface-container: rgb(255, 255, 255);
