--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="text-white bg-primary h-full w-full flex justify-center">
   <div class="flex items-center justify-between w-[95%] lg:w-[30%]"> 
-    <div class="flex flex-col items-center">
+    <div class="flex flex-col items-center" (click)="logOut()">
       <fa-icon [icon]="trophyIcon" class="text-white text-xl"></fa-icon>
       <span class="text-xs text-white">Contest</span>
   </div>
