--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,57 +1,30 @@
-<div class="w-full h-[130%] flex flex-col overflow-auto item">
-    <div class="bg-primary flex flex-col justify-center items-center py-10">
-        <img src="assets/man-user.svg" alt="User Avatar" 
-            class="h-32 mt-2 rounded-full border-2 border-white shadow-lg">
-        
-        <div class="text-white text-center mt-4">
-            <h2 class="text-2xl font-semibold">Andreas Nelefelt</h2>
-            <p class="text-lg">a.nelefelt&#64;gmail.com</p>
-            <p class="text-md font-light">Nele</p>
+<div class="w-full h-full bg-gray-100 flex flex-col overflow-auto item">
+    <app-user-profile-header
+      [userName]="user?.userName"
+      [email]="user?.email"
+      [avatarUrl]="'assets/man-user.svg'">
+    </app-user-profile-header>
+
+    <div *ngIf="showSettings" class=" flex-1 flex flex-col items-center p-6 gap-2 w-full">
+        <h3 class="text-lg font-semibold text-gray-700 w-full max-w-md text-left">{{title}}</h3>
+
+        <app-settings-item 
+        *ngFor="let item of settingsMenuItems"
+        class="w-full max-w-md"
+        [icon]="item.icon"
+        [label]="item.label"
+        [routePath]="item.path">
+       </app-settings-item>
+
+       <div class="w-full  max-w-md bg-white flex items-center gap-4 px-4 py-3 rounded-xl shadow-sm cursor-pointer hover:bg-red-50 transition">
+         <fa-icon [icon]="logoutIcon" class="text-red-500 text-xl"></fa-icon>
+         <span class="text-red-500 font-medium">Log out</span>
         </div>
     </div>
 
-    <!-- 🔥 Visa endast settings-menyn om showSettings = true -->
-    <div *ngIf="showSettings" class="bg-gray-100 flex-1 flex flex-col items-center p-6 gap-2 w-full">
-        <h3 class="text-lg font-semibold text-gray-700 w-full max-w-md text-left">Settings</h3>
-
-        <div class="w-full max-w-md bg-white flex items-center justify-between px-4 mt-2 py-3 rounded-xl shadow-sm cursor-pointer hover:bg-gray-50 transition"
-             routerLink="profile">
-            <div class="flex items-center gap-4">
-                <fa-icon [icon]="userIcon" class="text-gray-600 text-xl"></fa-icon>
-                <span class="text-gray-700 font-medium">User</span>
-            </div>
-            <fa-icon [icon]="angleRightIcon" class="text-gray-400 text-lg"></fa-icon>
-        </div>
-
-        <div class="w-full max-w-md bg-white flex items-center justify-between px-4 py-3 rounded-xl shadow-sm cursor-pointer hover:bg-gray-50 transition"
-             routerLink="teams">
-            <div class="flex items-center gap-4">
-                <fa-icon [icon]="teamsIcon" class="text-gray-600 text-xl"></fa-icon>
-                <span class="text-gray-700 font-medium">Teams</span>
-            </div>
-            <fa-icon [icon]="angleRightIcon" class="text-gray-400 text-lg"></fa-icon>
-        </div>
-
-        <div class="w-full max-w-md bg-white flex items-center justify-between px-4 py-3 rounded-xl shadow-sm cursor-pointer hover:bg-gray-50 transition"
-             routerLink="notifications">
-            <div class="flex items-center gap-4">
-                <fa-icon [icon]="notificationIcon" class="text-gray-600 text-xl"></fa-icon>
-                <span class="text-gray-700 font-medium">Notifications</span>
-            </div>
-            <fa-icon [icon]="angleRightIcon" class="text-gray-400 text-lg"></fa-icon>
-        </div>
-        <div class="w-full  max-w-md bg-white flex items-center gap-4 px-4 py-3 rounded-xl shadow-sm cursor-pointer hover:bg-red-50 transition">
-            <fa-icon [icon]="logoutIcon" class="text-red-500 text-xl"></fa-icon>
-            <span class="text-red-500 font-medium">Log out</span>
-        </div>
-    </div>
-
-    <div class="flex-1 bg-gray-100 p-6 flex flex-col items-center">
+    <div (click)="logOut()" class="flex-1 bg-gray-100 p-6 flex flex-col items-center mb-16">
         <div class="self-center w-[400px] md:w-[500px]">
             <router-outlet></router-outlet>
         </div>
-
     </div>
-
- 
 </div>
