--- a/src/app/components/user/notifications/notifications.component.scss
+++ b/src/app/components/user/notifications/notifications.component.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    max-height: 400px;
+    max-height: 45vh;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     width: 100%;
@@ -33,8 +33,18 @@
     width: 100%;
     padding: 12px;
     border-radius: 12px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    // box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    // box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08), 0 2px 6px rgba(0, 0, 0, 0.04) !important;
+
 }
+
+.mat-mdc-card {
+    /* Tailwind shadow-lg equivalent */
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+                0 4px 6px -4px rgba(0, 0, 0, 0.1);
+    border-radius: 0.75rem; /* 12px, motsvarar Tailwind's rounded-lg */
+  }
+  
 
 /* 🔹 Håller ihop text och knappar i en rad */
 .invite-content {
