--- a/src/app/components/add-catch/add-catch.component.html
+++ b/src/app/components/add-catch/add-catch.component.html
@@ -10,7 +10,7 @@
 
   <form [formGroup]="catchForm" (ngSubmit)="addItem()" class="mb-5">
     
-    <!-- Välj fiskart -->
+    <!-- Fish type selection -->
     <mat-form-field class="w-full">
       <mat-label>Fiskart</mat-label>
       <mat-select formControlName="fishType" required panelClass="custom-overlay-panel">
@@ -20,7 +20,7 @@
       </mat-select>
     </mat-form-field>
 
-    <!-- Viktinput -->
+    <!-- Weight input -->
     <mat-form-field class="w-full">
       <mat-label>Vikt (kg)</mat-label>
       <input
@@ -32,7 +32,31 @@
       />
     </mat-form-field>
 
-    <!-- Knappar -->
+    <!-- Length input -->
+    <mat-form-field class="w-full">
+      <mat-label>Längd (cm)</mat-label>
+      <input
+        matInput
+        type="number"
+        formControlName="length"
+        required
+        placeholder="Längd i cm"
+      />
+    </mat-form-field>
+
+    <!-- Bait input -->
+    <mat-form-field class="w-full">
+      <mat-label>Bete</mat-label>
+      <input
+        matInput
+        type="text"
+        formControlName="bait"
+        required
+        placeholder="Ange bete"
+      />
+    </mat-form-field>
+
+    <!-- Buttons -->
     <div class="mt-5">
       <button 
         mat-flat-button 
