--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
     <span class="text-xs text-white">Map</span>
 </div>
       <fa-icon [icon]="addCatchIcon" (click)="openFishRegisterDialog()" class="text-white text-4xl lg:text-3xl cursor-pointer"></fa-icon>
-      <div class="flex flex-col items-center">
+      <div class="flex flex-col items-center cursor-pointer" routerLink="/leaderboard">
         <fa-icon [icon]="starIcon" class="text-white text-xl"></fa-icon>
         <span class="text-xs text-white">Leaderboard</span>
     </div>
